various local fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,11 +35,11 @@ autocfg = { git = "https://github.com/servo/autocfg", branch = "rustflags2" }
 winapi = { git = "https://github.com/servo/winapi-rs", branch = "patch-1" }
 
 [patch."https://github.com/servo/webxr"]
-webxr = { git = "https://github.com/asajeffrey/webxr", branch = "surfman" }
+webxr = { path = "../webxr/webxr" }
 webxr-api = { git = "https://github.com/asajeffrey/webxr", branch = "surfman" }
 
 [patch."https://github.com/servo/osmesa-src"]
 osmesa-src = { git = "https://github.com/asajeffrey/osmesa-src", branch = "servo" }
 
 [patch."https://github.com/pcwalton/surfman"]
-surfman = { git = "https://github.com/asajeffrey/surfman", branch = "servo" }
+surfman = { path = "../surfman/surfman" }
